--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,7 +5,7 @@ labels: ["bug"]
 body:
   - type: markdown
     attributes:
-      value: Please search for existing issues before reporting where possible to avoid duplicate reporting.
+      value: "**Note: Please search for existing issues before reporting where possible to avoid duplicate reporting.**"
   - type: input
     id: version_version
     attributes:
