--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
-name: Bug Report
-description: Create a report to help us improve
+name: Feature Request
+description: Suggest an idea for this project.
 title: "[Feature Request] "
 labels: ["enhancement"]
 body:
