--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -11,8 +11,8 @@ body:
     attributes:
       label: Question Type
       options:
-        - "Usage"
-        - "Code"
+        - "Codes"
+        - "Usages"
         - "Others"
     validations:
       required: true
