--- a/.github/workflows/play.yml
+++ b/.github/workflows/play.yml
@@ -16,10 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout the sources
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ matrix.branch }}
-
-      - name: Print build number
-        run: echo ${{ github.event.ref }}
+      - name: Play
+        run: |-
+            lscpu
+            free -m
