--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Create a report to help us improve.
+description: Create a report to help us improve. | 提交问题反馈以帮助我们改进。
 title: "[Bug] "
 labels: ["bug"]
 body:
