--- a/.github/workflows/mc-publish-test.yml
+++ b/.github/workflows/mc-publish-test.yml
@@ -25,7 +25,7 @@ jobs:
             
             - ${{ github.event.head_commit.message }}
           github-generate-changelog: true
-          github-draft: fals
           github-prerelease: true
-          github-tag: dev.${{ github.run_number }}
+          github-commitish: ${{ github.event.ref }}
+          github-tag: dev-${{ github.run_number }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
