--- a/.github/workflows/mc-publish-test.yml
+++ b/.github/workflows/mc-publish-test.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Publish
         uses: Kir-Antipov/mc-publish@v3.2
         with:
-          files: |
-            README.md
+          files: README.md
           github-changelog: |
             **This version is automatically released by CI Build**
             
