--- a/.github/workflows/mc-publish-test.yml
+++ b/.github/workflows/mc-publish-test.yml
@@ -6,9 +6,4 @@ jobs:
   build:
     permissions:
       contents: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the sources
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+    uses: ./.github/workflows/build.yml
