Update workflow call test.yml

--- a/.github/workflows/workflow call test.yml
+++ b/.github/workflows/workflow call test.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Determining build info
         id: build_info
         run: |
-          echo ${{ github.event }}
+          echo ${{ toJson(github.event) }}
