--- a/.github/workflows/workflow call test.yml
+++ b/.github/workflows/workflow call test.yml
@@ -3,11 +3,10 @@ on:
   workflow_call:
 
 jobs:
-  converttopdf:
-    name: Build PDF
+  play:
+    name: Print
     runs-on: ubuntu-latest
     steps:
-      - name: Determining build info
-        id: build_info
+      - name: Print github context
         run: |
-          echo ${{ toJson(github.event) }}
+          echo ${{ toJson(github) }}
